1. fixed issue that caused words to go off screen ( maybe) 2. fixed logo placement (maybe). 3. changed some wording. 4. redunced background fiter

--- a/bookbuddy/frontend/src/Styling/signup.css
+++ b/bookbuddy/frontend/src/Styling/signup.css
@@ -121,7 +121,7 @@ body {
 position: fixed;
 
 /* 2. Anchor it to the top edge */
-top: 0vh;
+top: -35vh;
 
 /* 3. Anchor it to the right edge */
 right: 0vh;
